# simulation_PFE_V2

./: .gitignore  README.md
src/icube_ur_cell/: README.md
src/icube_ur_cell/focus_curve/: CMakeLists.txt  package.xml
src/icube_ur_cell/focus_curve/include/focus_curve/: csv_utils.hpp  image_capture_manager.hpp  image_processing_utils.hpp
src/icube_ur_cell/focus_curve/launch/: focus_curve.launch.py
src/icube_ur_cell/focus_curve/src/: focus_curve.cpp
src/icube_ur_cell/icube_ur_cell_control/: CMakeLists.txt  package.xml
src/icube_ur_cell/icube_ur_cell_control/config/: icube_ur_calibration.yaml
src/icube_ur_cell/icube_ur_cell_control/launch/: rsp.launch.py  start_robot.launch.py  start_robot_control.launch.py  start_robot_full.launch.py
src/icube_ur_cell/icube_ur_cell_control/rviz/: view_robot.rviz
src/icube_ur_cell/icube_ur_cell_control/urdf/: icube_ur_cell_ros2_control.urdf.xacro
src/icube_ur_cell/icube_ur_cell_description/: CMakeLists.txt  package.xml
src/icube_ur_cell/icube_ur_cell_description/launch/: view_robot.launch.py
src/icube_ur_cell/icube_ur_cell_description/rviz/: urdf.rviz
src/icube_ur_cell/icube_ur_cell_description/urdf/: icube_ur_cell.urdf.xacro  icube_ur_cell_macro.xacro  plate_support_macro.xacro
src/icube_ur_cell/icube_ur_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/icube_ur_cell/icube_ur_cell_moveit_config/config/: icube_ur_cell.srdf  icube_ur_cell_servo.yaml  joint_limits.yaml  moveit_controllers.yaml
src/icube_ur_cell/icube_ur_cell_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  moveit_servo_control_ur.launch.py  setup_assistant.launch.py
src/icube_ur_cell/icube_ur_cell_servo_control/: CMakeLists.txt  package.xml
src/icube_ur_cell/icube_ur_cell_servo_control/src/: servo_keyboard_input_ur.cpp
src/icube_ur_cell/tpe_av/rqt_tpe_gui/: CMakeLists.txt  package.xml  plugin.xml
src/icube_ur_cell/tpe_av/rqt_tpe_gui/include/rqt_tpe_gui/: GraphicsScene.h  structav.h  tpe_view.h
src/icube_ur_cell/tpe_av/rqt_tpe_gui/scripts/: rqt_node
src/icube_ur_cell/tpe_av/rqt_tpe_gui/src/: GraphicsScene.cpp  tpe_view.cpp  tpe_view_ros.cpp
src/icube_ur_cell/tpe_av/rqt_tpe_gui/ui/: mainwindow.ui
src/icube_ur_cell/tpe_av/tpe_av_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/icube_ur_cell/tpe_av/tpe_av_plugins/include/tpe_av_plugins/: tpe_av_plugins.hpp  visibility_control.h
src/icube_ur_cell/tpe_av/tpe_av_plugins/src/: tpe_av_3d.cpp  tpe_av_plugins.cpp
src/icube_ur_cell/tpe_av/tpe_base/: CMakeLists.txt  package.xml
src/icube_ur_cell/tpe_av/tpe_base/include/tpe_base/: tpe.h  tpe_base.h  tpe_common.hpp
src/icube_ur_cell/tpe_av/tpe_robot_mathlib/: CMakeLists.txt  package.xml  tpe_robot_mathlibConfig.cmake.in  tpe_robot_mathlibConfigVersion.cmake.in
src/icube_ur_cell/tpe_av/tpe_robot_mathlib/include/tpe_robot_mathlib/: mathlib.hpp  visibility_control.h
src/icube_ur_cell/tpe_av/tpe_robot_mathlib/src/: mathlib.cpp
src/icube_ur_cell/vs_ur_ws/: CMakeLists.txt  Planner.md  README.md  package.xml
src/icube_ur_cell/vs_ur_ws/launch/: ws_sim.launch.py
src/icube_ur_cell/vs_ur_ws/src/: vs_ur_ws.cpp
